--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,15 +13,14 @@ Spring:
     name: outsourcing
 
   datasource:
-    url: jdbc:mysql://localhost:3306/newsfeed
+    url: jdbc:mysql://localhost:3306/outsourcing
     username: ${DB_USER}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         show_sql: true
