--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,8 +16,8 @@ Spring:
 
   datasource:
     url: jdbc:mysql://localhost:3306/outsourcing
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
+    username: ${DB_USER:root}
+    password: ${DB_PASSWORD:0000}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
