--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,5 +38,6 @@ springdoc:
     tags-sorter: alpha
   api-docs:
     path: /api-docs
+    enabled: true
   default-consumes-media-type: application/json;charset=UTF-8
   default-produces-media-type: application/json;charset=UTF-8
