update: 전체 Controller JWT 적용 완료
## 구조 변경
- annotation 폴더에 Auth, Owner

## 코드 컨베이션 변경
- 권한 내용 제거

Signed-off-by: mixedsider <dmstjd0812@gmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ Spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         show_sql: true
